<resources>
    <string name="app_name">Quiz Project</string>
    <string name="back_menu">Back</string>
    <string name="search_menu">Search</string>
    <string name="score_menu">Score</string>
    <string name="answer_menu">Answer Key</string>
    <string name="exit_menu">Exit</string>
    <string name="header_1">Are You Ready?</string>

    <!-- Question list for question_index_layout -->

    <string name="question_a">A. Which are the screen sizes in Android?</string>
    <string name="q_a_choice_a">Small</string>
    <string name="q_a_choice_b">Normal</string>
    <string name="q_a_choice_c">Large</string>
    <string name="q_a_choice_d">All of the above</string>
    <string name="question_b">B. What are the Direct subclasses of Activity?</string>
    <string name="q_b_choice_a">AccountAuthenticatorActivity</string>
    <string name="q_b_choice_b">ActivityGroup</string>
    <string name="q_b_choice_c">ExpandableListActivity</string>
    <string name="q_b_choice_d">ListActivity</string>
    <string name="question_c">C. Which one is not a nickname of a version of Andriod?</string>
    <string name="q_c_choice_a">cupcake</string>
    <string name="q_c_choice_b">Gingerbread</string>
    <string name="q_c_choice_c">Honeycomb</string>
    <string name="q_c_choice_d">Muffin</string>
    <string name="question_d">D. Android is based on Linux for the following reason.</string>
    <string name="q_d_choice_a">Security</string>
    <string name="q_d_choice_b">Portability</string>
    <string name="q_d_choice_c">Networking</string>
    <string name="q_d_choice_d">All of these</string>
    <string name="question_e">E. What does the .apk extension stand for?</string>
    <string name="question_f">F. Dialog classes in android?</string>
    <string name="q_f_choice_a">AlertDialog</string>
    <string name="q_f_choice_b">ProgressDialog</string>
    <string name="q_f_choice_c">DatePickerDialog</string>
    <string name="q_f_choice_d">TimePickerDialog</string>
    <string name="question_g">G. What is contained within the manifest xml file?</string>
    <string name="q_g_choice_a">The permissions the app requires</string>
    <string name="q_g_choice_b">The list of strings used in the app</string>
    <string name="q_g_choice_c">The source code</string>
    <string name="q_g_choice_d">All other choices</string>
    <string name="question_h">H. What is contained within the Layout xml file?</string>
    <string name="q_h_choice_a">Orientations and layouts that specify what the display looks like.</string>
    <string name="q_h_choice_b">The permissions required by the app.</string>
    <string name="q_h_choice_c">The strings used in the app.</string>
    <string name="q_h_choice_d">The code which is compiled to run the app.</string>
    <string name="question_i">I. Which are the screen densities</string>
    <string name="q_i_choice_a">low density</string>
    <string name="q_i_choice_b">medium density</string>
    <string name="q_i_choice_c">high density</string>
    <string name="q_i_choice_d">extra high density</string>
    <string name="question_j">J. The R file is a(an) generated file</string>
    <string name="q_j_choice_a">Automatically</string>
    <string name="q_j_choice_b">Manually</string>
    <string name="q_j_choice_c">Emulated</string>
    <string name="q_j_choice_d">None of the above</string>
    <string name="question_k">K. Creating a UI (User Interface) in Android requires careful use of…</string>
    <string name="q_k_choice_a">Java and SQL</string>
    <string name="q_k_choice_b">XML and Java</string>
    <string name="q_k_choice_c">XML and C++</string>
    <string name="q_k_choice_d">Dreamweaver</string>
    <string name="question_l">L. What built-in database is Android shipped with?</string>
    <string name="q_l_choice_a">SQLite</string>
    <string name="q_l_choice_b">Apache</string>
    <string name="q_l_choice_c">MySQL</string>
    <string name="q_l_choice_d">Oracle</string>
    <string name="question_m">M. Which of the following is NOT a state in the lifecycle of a service?</string>
    <string name="q_m_choice_a">Starting</string>
    <string name="q_m_choice_b">Running</string>
    <string name="q_m_choice_c">Destroyed</string>
    <string name="q_m_choice_d">Paused</string>
</resources>
