<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.quizproject.MainActivity">
    <item
        android:id="@+id/back"
        android:icon="@drawable/ic_action_back"
        android:title="@string/back_menu"
        app:showAsAction="always" />
    <item
        android:id="@+id/home"
        android:icon="@drawable/home_icon"
        android:title="@string/back_menu"
        app:showAsAction="always" />

    <item
        android:id="@+id/search_src_text"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search_menu"
        app:showAsAction="always" />
    <item
        android:id="@+id/score"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/score_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/answer_key"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/answer_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:title="@string/exit_menu"
        app:showAsAction="never"/>
</menu>
